--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -105,16 +105,16 @@
 
 <!-- Template Cards Section -->
 <section class="container mx-auto mt-12 px-4 bg-gradient-to-b from-gray-900 to-black"  >
-  <h3 class="text-2xl font-bold mb-6 text-center md:text-left text-white">
+  <h3 class="text-2xl mt-6 font-bold mb-6 text-start md:text-left text-white">
     Popular Templates
   </h3>
-  <div class=" grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+  <div class=" grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-0">
     <app-template-card
       *ngFor="let template of templates"
       [template]="template"
       (useTemplate)="navigateToDocument($event)"
       (editTemplate)="navigateToEdit($event)"
-      class="bg-gray-800/80 backdrop-blur rounded-xl p-4 shadow-lg hover:shadow-indigo-500/20 transition"
+      class="backdrop-blur rounded-xl p-4 shadow-xl hover:shadow-indigo-500/20 transition"
     ></app-template-card>
   </div>
 </section>
