--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -3,6 +3,7 @@
 <section
   class="relative bg-gradient-to-b from-gray-900 to-black text-white py-16 px-6"
 >
+
   <div
     class="grid max-w-screen-xl px-4 py-4 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12"
   >   
@@ -18,6 +19,7 @@
           class="text-xs bg-primary rounded-full text-white px-4 py-1.5 mr-3"
           >New Here?</span
         >
+        
         <span class="text-sm font-medium">Setup Profile first</span>
         <svg
           class="ml-2 w-5 h-5"
@@ -45,13 +47,8 @@
           extract structured data automatically using AI-powered  <br /> OCR and smart
           templates.<br /><br />
       </p>
-      <a
-        (click)="scrollToTemplates()"
-        href="#"
-        class="inline-flex items-center justify-center px-5 py-3 mr-3 text-base font-medium text-center text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900"
-      >
-        Start Scanning
-        <svg
+      <p-button  label="Start Scanning" link 
+       ><svg
           class="w-5 h-5 ml-2 -mr-1"
           fill="currentColor"
           viewBox="0 0 20 20"
@@ -62,15 +59,10 @@
             d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z"
             clip-rule="evenodd"
           ></path>
-        </svg>
-      </a>
-      <a
-        href="/template-builder"
-        (click)="navigateToTemplateBuilder()"
-        class="inline-flex items-center justify-center px-5 py-3 text-base font-medium text-center text-gray-900 border border-gray-300 rounded-xl hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800"
-      >
-        Create Templates
-      </a>
+        </svg></p-button>
+     
+      <p-button class="ml-6" label=" Create Templates" variant="outlined" severity="help"   (click)="navigateToTemplateBuilder()" />
+     
     </div>
     <div class="hidden lg:mt-0 lg:col-span-5 lg:flex">
       <img
