--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -77,12 +77,17 @@
       </div>
 
       <!-- Submit -->
-      <button
-        type="submit"
-        class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-medium py-3 rounded-2xl transition duration-300"
-      >
-        Sign in now
-      </button>
+      <!-- Submit -->
+ <div class="w-full max-w-md mx-auto mt-6">
+  <p-button
+    class="w-full"
+    label="Sign in now"
+    icon="pi pi-check"
+    [loading]="loading"
+    type="submit"
+  ></p-button>
+</div>
+
 
       <div *ngIf="errorMessage" class="text-red-500 mt-3 text-center">
         {{ errorMessage }}
@@ -130,7 +135,6 @@
   </div>
   <!-- Right Side: Illustration -->
   <div class="w-full md:w-1/2 relative">
-  
     <a
       href="#"
       class="absolute top-6 left-6 bg-white/10 backdrop-blur-sm text-white px-4 py-2 rounded-full text-sm hover:bg-white/20 transition-colors z-10"
@@ -149,7 +153,9 @@
           Work Smart Not Hard,
         </h2>
         <br />
-        <h2 class="text-2xl md:text-4xl font-semibold">Say Good Bye to<br />Manual Data Entry</h2>
+        <h2 class="text-2xl md:text-4xl font-semibold">
+          Say Good Bye to<br />Manual Data Entry
+        </h2>
         <div class="flex gap-2 mt-6">
           <div class="w-4 h-1 bg-white/30 rounded"></div>
           <div class="w-4 h-1 bg-white/30 rounded"></div>
